--- a/site/templates/parts/package.xml
+++ b/site/templates/parts/package.xml
@@ -1,6 +1,11 @@
 <document>
 	<section id="package_details" class="$params['uid']" cms:eval="class">
 		<cms:markdown param="description" multilanguage="yes"/>
+
+		<p class="price">
+			<cms:var param="price" />
+			<cms:text constant="currency_symbol"/>
+		</p>
 		
 		<a
 			href="url_Make('checkout', 'shop', array('package', $params['uid']))"
